--- a/Administrativo/pom.xml
+++ b/Administrativo/pom.xml
@@ -62,7 +62,27 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!--<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>${dockerfile-maven-version}</version>
+				<executions>
+					<id>default</id>
+					<
+				</executions>
+				<configuration>
+					<imageName>example</imageName>
+					<dockerDirectory>docker</dockerDirectory>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin> -->
 		</plugins>
+        <finalName>docker-spring-boot</finalName>
 	</build>
-
 </project>
