--- a/Administrativo/devops/Dockerfile
+++ b/Administrativo/devops/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-ADD target/ docker-spring-boot.jar
+ADD target/docker-spring-boot.jar
 EXPOSE 9999
 ENTRYPOINT ["java", "-jar", "docker-spring-boot.jar"]
 
